syntax = "proto3";
package novachain.intertx.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Carina-labs/novachain/x/inter-tx/types";

message RegisteredZone {
  string zone_name = 1;
  IcaConnectionInfo connection_info = 2;
  string validator_address = 3;
  string base_denom = 4;
  string sn_denom = 5;
  string st_denom = 6;
  string authz_address = 7;
  repeated string authz_permit = 8;
}

message IcaAccount {
  string zone_name = 1;
  string owner_address = 2;
  cosmos.base.v1beta1.Coin balance = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

//zone name, connection id, portID(owner address)
message IcaConnectionInfo {
  string connection_id = 1;
  string owner_address = 2;
}